[package]
name = "deep_neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.38.3", features = ["lazy", "ndarray"] }
ndarray = { version = "0.15.6", features = ["serde"] }
rand = "0.9.0-alpha.1"
num-integer = "0.1.46"
serde_json = "1.0.115"